<resources>
    <string name="app_name">LeaeningFoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">Hello explore your dream food</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="Register">Register</string>
    <string name="sign_in2"> sign_in?</string>
    <string name="alreay_registered">Alreay Registered</string>
    <string name="password">Password</string>
    <string name="fullname">FullName</string>
    <string name="email_address">Email</string>
    <string name="register2">Register</string>
    <string name="register3">Register</string>
    <string name="todo">TODO</string>
    <string name="sign_in1">sign2</string>
    <string name="registeroption">Register</string>
    <string name="don_t_have_an_account">don_t_have_an_account</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="daily_meals">Daily Meals</string>
    <string name="dail_meals">deal meals</string>
    <string name="favourate">favourate</string>
    <string name="sigh_here">Sigh here</string>
    <string name="my_cart">my cart</string>
    <string name="log_out">Log Out</string>
    <string name="DailyMeals">DailyMeals</string>
    <string name="HelloAli">Hello Ali</string>
    <string name="search_your_Food">search your Food ?</string>
    <string name="what_do_you_want">what do yo want ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="_10_00_23_00">10:00-23:00</string>
    <string name="_5_0">5.0</string>
    <string name="todo1">TODO</string>
    <string name="min_45">min- $45</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here</string>

</resources>