<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/vvf"
        android:name="com.example.learningfoodapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_galler"
        android:name="com.example.learningfoodapp.ui.gallery.DailyMealFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_daily_meal" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.learningfoodapp.ui.slideshow.FavourateFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_favourate" />
</navigation>