<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favourite.HomeFragment"
    android:background="@color/mediumgray">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/search_bg"
            android:drawableRight="@drawable/baseline_search_24"
            android:drawablePadding="9dp"
            android:fontFamily="@font/amita"
            android:hint="@string/search_your_Food"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,RtlHardcoded,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageview4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/search_bg"
        android:padding="10dp"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintBottom_toBottomOf="@id/edittext3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edittext3"

        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"

        android:fontFamily="@font/amarante"
        android:text="@string/HelloAli"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext3" />
    <TextView
        android:id="@+id/textview8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:fontFamily="@font/amita"
        android:text="@string/what_do_you_want"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview7" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_hor_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"

        app:layout_constraintTop_toBottomOf="@id/textview8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hom_ever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/home_hor_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"



            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>